<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_bubble_char" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/demam" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/nyeri_tenggorokan" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/tenggorokan_tampak_merah" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/pembengkakan_kelenjar_getah_bening" />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/sakit_kepala" />

        <CheckBox
            android:id="@+id/checkbox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/hidung_meler" />

        <CheckBox
            android:id="@+id/checkbox6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/batuk" />

        <CheckBox
            android:id="@+id/checkbox7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/nyeri_otot" />

        <CheckBox
            android:id="@+id/checkbox8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/nyeri_sendi" />

        <CheckBox
            android:id="@+id/checkbox9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/kemerahan_kulit" />

        <CheckBox
            android:id="@+id/checkbox10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/muncul_bintik_bintik_merah" />

        <CheckBox
            android:id="@+id/checkbox11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/tubuh_mengigil" />

        <Button
            android:id="@+id/btnDeteksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@color/colorPrimary"
            android:text="@string/deteksi"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nama_penyakit"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>